// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`imageFallback > generateFallbackSvg > should generate a snapshot for an SVG with a deviceLineAbbrev 1`] = `
"<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
    <rect width="100" height="100" fill="#f9fafb"/>
    <text x="50" y="50" text-anchor="middle" dominant-baseline="middle" 
          font-family="Arial, sans-serif" font-size="18" font-weight="600" fill="#6b7280"
          style="user-select: none; pointer-events: none;">
      AB
    </text>
  </svg>"
`;

exports[`imageFallback > generateFallbackSvg > should generate a snapshot for an SVG with a generated abbreviation 1`] = `
"<svg width="120" height="120" xmlns="http://www.w3.org/2000/svg">
    <rect width="120" height="120" fill="#f9fafb"/>
    <text x="60" y="60" text-anchor="middle" dominant-baseline="middle" 
          font-family="Arial, sans-serif" font-size="18" font-weight="600" fill="#6b7280"
          style="user-select: none; pointer-events: none;">
      MY
    </text>
  </svg>"
`;

exports[`imageFallback > generateFallbackSvg > should generate a snapshot for an SVG with the default "UI" abbreviation 1`] = `
"<svg width="140" height="140" xmlns="http://www.w3.org/2000/svg">
    <rect width="140" height="140" fill="#f9fafb"/>
    <text x="70" y="70" text-anchor="middle" dominant-baseline="middle" 
          font-family="Arial, sans-serif" font-size="18" font-weight="600" fill="#6b7280"
          style="user-select: none; pointer-events: none;">
      UI
    </text>
  </svg>"
`;
